# aoc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
lib/: Cache.cpp  Cache.h  Day.cpp  Day.h  Http.cpp  Http.h  PuzzleIO.cpp  PuzzleIO.h  Report.cpp  Report.h
src/2024/: day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h
